--- a/GUNAAPugetSound/ClientApp/package.json
+++ b/GUNAAPugetSound/ClientApp/package.json
@@ -19,20 +19,22 @@
     "@syncfusion/ej2-react-schedule": "^16.2.50",
     "@syncfusion/ej2-schedule": "^16.2.50",
     "ajv": "^6.5.3",
-    "bootstrap": "^3.3.7",
+    "bootstrap": ">=3.4.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
     "react": "^16.0.0",
     "react-big-calendar": "^0.19.2",
     "react-bootstrap": "^0.31.5",
     "react-date-picker": "^6.12.1",
-    "react-dom": "^16.0.0",
+    "react-dom": ">=16.2.1",
     "react-photo-gallery": "^6.2.1",
     "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "webpack-dev-server": ">=3.1.11",
+    "merge": ">=1.2.1"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
