--- a/GUNAAPugetSound/ClientApp/package.json
+++ b/GUNAAPugetSound/ClientApp/package.json
@@ -20,21 +20,28 @@
     "@syncfusion/ej2-schedule": "^16.2.50",
     "ajv": "^6.5.3",
     "bootstrap": ">=3.4.0",
+    "fontawesome": "^5.6.3",
+    "jquery": "1.9.1",
     "jwt-decode": "^2.2.0",
+    "merge": ">=1.2.1",
     "moment": "^2.22.2",
+    "popper.js": "^1.14.6",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
-    "react-big-calendar": "^0.19.2",
+    "react-big-calendar": "^0.20.2",
     "react-bootstrap": "^0.31.5",
     "react-date-picker": "^6.12.1",
     "react-dom": ">=16.2.1",
+    "react-moment": "^0.8.4",
     "react-photo-gallery": "^6.2.1",
     "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
+    "react-spinners-kit": "^1.5.5",
     "rimraf": "^2.6.2",
-    "webpack-dev-server": ">=3.1.11",
-    "merge": ">=1.2.1"
+    "webpack": "^4.0.0",
+    "webpack-dev-server": ">=3.1.11"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
