--- a/GUNAAPugetSound/ClientApp/package.json
+++ b/GUNAAPugetSound/ClientApp/package.json
@@ -20,7 +20,7 @@
     "@syncfusion/ej2-schedule": "^16.2.50",
     "ajv": "^6.5.3",
     "bootstrap": ">=3.4.0",
-    "fontawesome": "^5.6.3",
+    "font-awesome": "4.7.0",
     "jquery": "1.9.1",
     "jwt-decode": "^2.2.0",
     "merge": ">=1.2.1",
@@ -32,13 +32,13 @@
     "react-bootstrap": "^0.31.5",
     "react-date-picker": "^6.12.1",
     "react-dom": ">=16.2.1",
+    "react-modal": "^3.8.1",
     "react-moment": "^0.8.4",
     "react-photo-gallery": "^6.2.1",
     "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
-    "react-spinners-kit": "^1.5.5",
     "rimraf": "^2.6.2",
     "webpack": "^4.0.0",
     "webpack-dev-server": ">=3.1.11"
