--- a/GUNAAPugetSound/appsettings.json
+++ b/GUNAAPugetSound/appsettings.json
@@ -7,7 +7,8 @@
     "SmtpUser": "sabrina.nikia.smith@gmail.com",
     "SmtpPass": "35_@eian",
     "TokenLifetime": "00:00:45",
-    "EmailFrom": "GUNNA Puget Sound"
+    "EmailFrom": "GUNNA Puget Sound",
+    "ScholarshipToEmail": "sabrina.nikia.smith@gmail.com"
   },
   "Logging": {
     "IncludeScopes": false,
