--- a/GUNAAPugetSound/ClientApp/package.json
+++ b/GUNAAPugetSound/ClientApp/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.1.4",
     "history": "^4.10.1",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "jquery": "1.9.1",
     "jwt-decode": "^2.2.0",
     "lint-staged": "^10.4.0",
@@ -52,18 +53,28 @@
     "react-scripts": "^1.1.5",
     "rimraf": "^3.0.2",
     "rxjs": "^6.3.3",
+    "storybook": "^6.0.28",
     "yup": "^0.28.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-essentials": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/addon-viewport": "^5.1.3",
+    "@storybook/addons": "^5.1.3",
+    "@storybook/node-logger": "^6.0.28",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.28",
     "babel-loader": "^8.0.5",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.11.0",
     "less-loader": "^5.0.0",
     "path": "^0.12.7",
+    "react-is": "^17.0.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
@@ -74,6 +85,8 @@
     "start": "rimraf ./build && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public --no-dll",
+    "build-storybook": "build-storybook -s public --no-dll"
   }
 }
