--- a/GUNAAPugetSound/ClientApp/package.json
+++ b/GUNAAPugetSound/ClientApp/package.json
@@ -9,6 +9,11 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "ajv": "^6.5.3",
     "axios": "^0.20.0",
     "bootstrap": ">=3.4.0",
@@ -22,7 +27,7 @@
     "jwt-decode": "^2.2.0",
     "lint-staged": "^10.4.0",
     "merge": ">=1.2.1",
-    "moment": "^2.22.2",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "node-sass-glob-importer": "^5.3.2",
     "popper.js": "^1.14.6",
