--- a/GUNAAPugetSound/appsettings.json
+++ b/GUNAAPugetSound/appsettings.json
@@ -20,8 +20,8 @@
   },
   //Development ConnectionString
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=GUNAA;Integrated Security=True;Pooling=False"
-    // "ProductionConnection": "Server=tcp:gunaaseattle.database.windows.net,1433;Initial Catalog=sqlserver;Persist Security Info=False;User ID=gunaaSeattleAdmin;Password=Techn@l@gy;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    //"DefaultConnection": "Data Source=.;Initial Catalog=GUNAA;Integrated Security=True;Pooling=False",
+    "DefaultConnection": "Server=tcp:gunaaseattle.database.windows.net,1433;Initial Catalog=sqlserver;Persist Security Info=False;User ID=gunaaSeattleAdmin;Password=Techn@l@gy;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "ServiceConfiguration": {
     "JwtSettings": {
