--- a/GUNAAPugetSound/ClientApp/.vscode/launch.json
+++ b/GUNAAPugetSound/ClientApp/.vscode/launch.json
@@ -4,17 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        // {
-        //     "name": ".NET Core Attach",
-        //     "type": "coreclr",
-        //     "request": "attach",
-        //     "processId": "${command:pickProcess}"
-        // },
+
+        {
+            "name": ".NET Core Attach",
+            "type": "coreclr",
+            "request": "attach",
+            "processId": "${command:pickProcess}"
+        },
         {
             "name": "Chrome",
             "type": "chrome",
             "request": "launch",
-            "url": "https://localhost:5001/",
+            "url": "https://localhost:44330/",
             "webRoot": "${workspaceRoot}/src",
             "sourceMapPathOverrides": {
                 "webpack:///src/*": "${webRoot}/*"
