--- a/GUNAAPugetSound/ClientApp/package.json
+++ b/GUNAAPugetSound/ClientApp/package.json
@@ -11,11 +11,11 @@
     "@babel/plugin-proposal-decorators": "^7.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "ajv": "^6.5.3",
     "axios": "^0.20.0",
+    "babel-loader": "8.1.0",
     "bootstrap": ">=3.4.0",
     "classnames": "^2.3.1",
     "file-loader": "^6.2.0",
@@ -23,11 +23,10 @@
     "formik": "^2.1.4",
     "history": "^4.10.1",
     "husky": "^4.3.0",
-    "jest": "^26.6.3",
     "jwt-decode": "^2.2.0",
     "lint-staged": "^10.4.0",
     "merge": ">=1.2.1",
-    "moment": "^2.29.1",
+    "moment": "^2.22.2",
     "node-sass": "^5.0.0",
     "node-sass-glob-importer": "^5.3.2",
     "popper.js": "^1.14.6",
@@ -42,7 +41,7 @@
     "react-photo-gallery": "^6.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^4.0.3",
     "rimraf": "^3.0.2",
     "rxjs": "^6.3.3",
     "storybook": "^6.0.28",
@@ -61,7 +60,6 @@
     "@storybook/node-logger": "^6.0.28",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.28",
-    "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.11.0",
@@ -69,9 +67,9 @@
     "path": "^0.12.7",
     "react-is": "^17.0.1",
     "style-loader": "^2.0.0",
-    "webpack": "^4.29.6",
+    "webpack": "4.44.2",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "3.11.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
@@ -87,5 +85,17 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public --no-dll",
     "build-storybook": "build-storybook -s public --no-dll"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
